--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,12 @@
 <footer>
   {{ site.footer }}
 </footer>
+<script>
+window.yaContextCb.push(()=>{
+	Ya.Context.AdvManager.render({
+		"blockId": "R-A-543222-3",
+		"type": "fullscreen",
+		"platform": "touch"
+	})
+})
+</script>
