--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,5 +17,14 @@ layout: compress
 	<script src="assets/js/player.js"></script>
 	<script id="chatBroEmbedCode">function ChatbroLoader(chats,async){async=!1!==async;var params={embedChatsParameters:chats instanceof Array?chats:[chats],lang:navigator.language||navigator.userLanguage,needLoadCode:'undefined'==typeof Chatbro,embedParamsVersion:localStorage.embedParamsVersion,chatbroScriptVersion:localStorage.chatbroScriptVersion},xhr=new XMLHttpRequest;xhr.withCredentials=!0,xhr.onload=function(){eval(xhr.responseText)},xhr.onerror=function(){console.error('Chatbro loading error')},xhr.open('GET','//www.chatbro.com/embed.js?'+btoa(unescape(encodeURIComponent(JSON.stringify(params)))),async),xhr.send()} ChatbroLoader({encodedChatId: '3Zra'});</script>
 	<script src="https://yandex.ru/ads/system/context.js" async></script>
+	<script>
+        window.yaContextCb.push(()=>{
+	Ya.Context.AdvManager.render({
+		"blockId": "R-A-543222-3",
+		"type": "fullscreen",
+		"platform": "touch"
+	})
+})
+</script>
 </body>
 </html>
