--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 {%- assign page_paths = site.header_pages | default: default_paths -%}
-<header><div class="logo"><a href="/"><img src="/assets/img/logo.png" alt="Deep House Online Radio"></a></div>
+<header><div class="logo"><a href="/"><img src="/assets/img/logo_year.png" alt="Deep House Online Radio"></a></div>
   <div class="menu">
     <ul>
       {%- for path in page_paths -%}
